test/cases/functions/invalid_arg_func.c
// RUN: %check -e %s
g(int j(){return 3;}); // CHECK: /error: /
